syntax = "proto3";
package documentpb;
option go_package = "src/document/documentpb";
import "google/protobuf/timestamp.proto";

message Page {
    string pageId = 1;
    int32 pageNumber = 2 ;
    string metadata = 3; // page metadata
    bytes object= 4;
}

message  Document {
    string docId = 1;
    int32 pageNumber=2;
    int32  numberOfPages = 3;
    string metadata = 4; // document metadata
    bytes object = 5;
    repeated Page page = 6;
    google.protobuf.Timestamp last_updated = 7;
}
